[package]
name = "gapdecoder"
version = "0.1.0"
authors = ["Ophir LOJKINE <ophir.lojkine@auto-grid.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom_error = "1.7.1"
block-modes = "0.3.3"
aes = "0.3.2"
hmac = "0.7.1"
sha-1 = "0.8.1"
base64 = "0.10.1"